# set-picks

./: .cursorrules  .env.example  .env.production  .env.qa.example  .env.staging  .firebaserc  .gitignore  .npmrc  AGENTS.md  App_FIREBASE_BACKUP.jsx  CHANGELOG.md  README.md  app.jsx  eslint.config.js  firebase.json  firestore.rules  firestore.rules.test.cjs  ico-0.3.3.tgz  index.html  middleware.js  og-home-html.mjs  package-lock.json  package.json  storage.rules  tailwind.config.js  vercel.json  vite.config.js
crew/: .env.example  .gitignore  README.md  __init__.py  crew.jsonc  pyproject.toml
crew/agents/: affiliate_program_manager.jsonc  brand_systems_partner.jsonc  business_analyst.jsonc  chief_customer_officer.jsonc  chief_data_officer.jsonc  chief_of_staff.jsonc  chief_revenue_officer.jsonc  chief_technology_officer.jsonc  comms_orchestration_lead.jsonc  customer_insights_analyst.jsonc  data_architect.jsonc  editor_in_chief.jsonc  growth_program_manager.jsonc  integrations_architect.jsonc  lead_gen_specialist.jsonc  market_intelligence_operator.jsonc  marketing_specialist.jsonc  monetization_strategist.jsonc  product_design_lead.jsonc  reporting_lead.jsonc  revops_lead.jsonc  social_demand_gen_operator.jsonc  social_media_specialist.jsonc  software_architect.jsonc  sponsor_bd_orchestrator.jsonc
crew/knowledge/: commercial_phase3_pointer.md  ga4_snapshot.example.md  optimize_snapshot_recipe.md
crew/pipelines/: affiliate_e2e.jsonc  campaign.jsonc  market_intel.jsonc  optimize.jsonc  revenue.jsonc  smoke.jsonc  sponsor_bd.jsonc
crew/scripts/: __init__.py  (+4 more)
(+917 files in other folders)
